# Managing-tifs

./: .gitignore  Analyze_input_data.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Analyze_input_data-checkpoint.ipynb
add_metadata/: Analyze_metadata_to_write.ipynb  Makefile  metadata_add_module.c  read_external_file.py  tag_registry.json  write_tag.py
add_metadata/origin/: 2025_08_31_U2280_Electrodes_GePP_HR_3um.tif  2025_08_31_U2280_Electrodes_GePP_HR_3um_001.ssc
images/: 2025_08_31_U2280_Electrodes_GePP_HR_3um.tif  2025_08_31_U2280_Electrodes_GePP_HR_3um_new.tif
